[tool.poetry]
name = "async_request"
version = "0.1.0"
description = ""
authors = ["Everton <everton_s.d@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
